[project]
name = "my-qutebrowser"
version = "0.1.0"
description = ""
authors = [
    {name = "fabandmina",email = "placeholder@mail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "qutebrowser (>=3.4.0,<4.0.0)",
    "pyqt6 (>=6.8.0,<7.0.0)",
    "pyqt6-webengine (>=6.8.0,<7.0.0)",
    "adblock (>=0.6.0,<0.7.0)",
    "pynacl (>=1.5.0,<2.0.0)",
    "idna (>=3.10,<4.0)",
    "tldextract (>=5.1.3,<6.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
